--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ Flask-Modus==0.0.1
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
+gunicorn==19.9.0
 idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10
@@ -26,6 +27,9 @@ MarkupSafe==1.1.1
 marshmallow==2.18.1
 marshmallow-sqlalchemy==0.16.0
 oauthlib==3.0.1
+psycopg2==2.7.7
+pur==5.2.1
+pycodestyle==2.5.0
 pycparser==2.19
 python-dateutil==2.8.0
 python-dotenv==0.10.1
