--- a/requirements.txt
+++ b/requirements.txt
@@ -27,7 +27,7 @@ MarkupSafe==1.1.1
 marshmallow==2.18.1
 marshmallow-sqlalchemy==0.16.0
 oauthlib==3.0.1
-psycopg2==2.7.7
+psycopg2-binary==2.7.7
 pur==5.2.1
 pycodestyle==2.5.0
 pycparser==2.19
